--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="err_email">Please double check your email</string>
     <string name="err_Password">Your password must contain at least 8 characters. Please fulfill all the below criteria:\n\nAt least one lower-case letter\n\nAt least one upper-case letter\n\nAt least one number\n\nAt least one special character</string>
     <string name="sign_up_description">Create an account to enjoy podcast, ghazals, nazm, shayari and more.</string>
-    <string name="existing_account">Already have an account? </string>
+    <string name="existing_account">Already have an account?\t</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="email_address">Email Address</string>
@@ -106,6 +106,11 @@
     <string name="password_reset_description">Provide your email, we will be sending OTP on your registered phone number to verify</string>
     <string name="new_password">New Password (8+ characters)</string>
     <string name="account_verified_description">Your account was verified. Please set your new password</string>
+    <string name="sign_up_for_free">Sign up for free</string>
+    <string name="new_to_ibtidaa">New to Ibtidaa?\t</string>
+    <string name="err_matchPassword">Password did not match</string>
+    <string name="loginPassword">Password</string>
+    <string name="err_loginPassword">Incorrect Password</string>
 
 
 </resources>
