Added layout and recycler for ghazal page/as new kotlin files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="err_loginPassword">Incorrect Password</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="back">Back</string>
 
 
 </resources>
